--- a/gyeol/web-filter/package.json
+++ b/gyeol/web-filter/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/clmtrackr": "^1.1.0",
     "@types/jest": "24.0.23",
     "@types/node": "12.12.11",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
     "@types/styled-components": "^4.4.0",
+    "clmtrackr": "^1.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
